Apply compile fixes