@@ -201,7 +201,7 @@ IEntityMultiPartTitan {
     @Override
     protected void entityInit() {
         super.entityInit();
-        this.dataWatcher.addObject(16, (Object)new Byte(0));
+        this.dataWatcher.addObject(16, (Object)Byte.valueOf((byte)0));
         this.dataWatcher.addObject(17, (Object)0);
     }
 
